# Rust-Game-API

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: app_state.rs  config.rs  main.rs
src/api/: error.rs
src/db/: client.rs  mod.rs  schema.rs
src/features/: mod.rs
src/features/auth/: guard.rs  jwt.rs  mod.rs  models.rs  routes.rs  service.rs
src/features/catalog/: mod.rs  models.rs  repository.rs  routes.rs  service.rs
src/features/health/: routes.rs
src/features/progression/: mod.rs  models.rs  repository.rs  routes.rs  service.rs
src/features/users/: mod.rs  models.rs  repository.rs  routes.rs  service.rs
