[package]
name = "Rust_Game_API"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.14", features = ["compat"] }
tiberius = { version = "0.12.3", default-features = false, features = ["rustls", "tds73"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
