[package]
name = "Rust_Game_API"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
mysql_async = { version = "0.34.2", default-features = false, features = ["default-rustls"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread", "time"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
